--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "node-testing-framework",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.mjs",
+  "main": "index.mjs",
   "scripts": {
-    "start": "node src/index.mjs"
+    "start": "node index.mjs"
   },
   "repository": {
     "type": "git",
@@ -15,7 +15,6 @@
   },
   "homepage": "https://github.com/inokawa/node-cli-practice#readme",
   "dependencies": {
-    "glob": "^7.2.0",
     "jest-haste-map": "^27.4.6"
   }
 }
